// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppView > when the app is installed > should render the app view with configuration screen 1`] = `
<div>
  <div
    class="css-7bfeg1"
  />
  <div
    class="css-jwwzlh"
  >
    <h1
      class="css-acwcvw css-ow69k3"
      data-test-id="cf-ui-heading"
    >
      About AI Image Tagging
    </h1>
    <p
      class="css-ki4iwd"
      data-test-id="cf-ui-paragraph"
    >
      The AI Image Tagging app uses AI and deep learning capabilities to automatically assign tags to images. The tags are visible and accessible via the Contentful web app entry editor and tags are searchable in the search bar.
    </p>
    <hr
      class="css-10hsrou"
    />
    <h1
      class="css-acwcvw css-ow69k3"
      data-test-id="cf-ui-heading"
    >
      Getting started
    </h1>
    <p
      class="css-ki4iwd"
      data-test-id="cf-ui-paragraph"
    >
      Follow the next steps to create a new image entry with AI generated tags:
    </p>
    <ul
      class="css-1uk1gs8 css-qslnu8"
      data-test-id="cf-ui-list"
    >
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Go to the "Content" page
      </li>
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Create a new entry of type "AI Image Tagging" (or the name you chose during the installation)
      </li>
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Fill in the required fields and publish
      </li>
    </ul>
    <p
      class="css-15g2oxy css-ki4iwd"
      data-test-id="cf-ui-paragraph"
    >
      Follow the next steps to reference the newly created image with AI Image Tagging in another content type:
    </p>
    <ul
      class="css-1uk1gs8 css-qslnu8"
      data-test-id="cf-ui-list"
    >
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Go to the "content model" page
      </li>
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Edit the content type that needs to reference the image with the AI tags
      </li>
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Create a new field of type "reference"
      </li>
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Set a validation rule requiring that the content type the reference points to is of type "AI Image Tagging"
      </li>
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Optionally set the appearance of the new reference field to "entry card" in its settings
      </li>
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Go back to the "content" page
      </li>
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Create/edit an entry of the content type referencing the image with the AI tags
      </li>
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Set the reference field you added to point to the image with AI tags entry
      </li>
    </ul>
    <hr
      class="css-10hsrou"
    />
    <h1
      class="css-acwcvw css-ow69k3"
      data-test-id="cf-ui-heading"
    >
      Uninstallation and cleanup
    </h1>
    <p
      class="css-ki4iwd"
      data-test-id="cf-ui-paragraph"
    >
      If you uninstall the AI Image Tagging app you will have to manually clean up the content type we created for you during the installation. To do that follow the next steps:
    </p>
    <ul
      class="css-1uk1gs8 css-qslnu8"
      data-test-id="cf-ui-list"
    >
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Go to the "content" page
      </li>
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Delete any entries of type "AI Image Tagging" (or the name you chose during installation)
      </li>
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Go to the "content model" page
      </li>
      <li
        class="css-gic5lh"
        data-test-id="cf-ui-list-item"
      >
        Edit the content type the app created, select "actions" from the top menu and "delete"
      </li>
    </ul>
  </div>
  <div
    class="css-13jvbbd"
  >
    <img
      alt="logo"
      src="/src/components/AppView/app-logo.svg"
    />
  </div>
</div>
`;

exports[`AppView > when the app is not installed > should render inline validation if the content type id is taken 1`] = `
<div
  class="css-15g2oxy css-1fobf8d"
  data-test-id="content-type-name"
  role="group"
>
  <label
    class="css-1ry5edl"
    data-test-id="cf-ui-form-label"
    for="content-type-name"
    id="content-type-name-label"
  >
    Content type name
  </label>
  <input
    aria-describedby="content-type-name-helptext"
    class="css-82ji86"
    data-test-id="content-type-name-input"
    id="content-type-name"
    name="contentTypeName"
    placeholder="e.g. AI Tagged Image"
    type="text"
    value="Image with AI tags"
  />
  <div
    class="css-gg4vpm"
  >
    <p
      class="css-1l2c7z"
      data-test-id="cf-ui-help-text"
      id="content-type-name-helptext"
    >
      You can use this content type to add tags to images
    </p>
  </div>
</div>
`;

exports[`AppView > when the app is not installed > should render inline validation if the content type id is taken 2`] = `
<div
  class="css-15g2oxy css-1fobf8d"
  data-test-id="content-type-id"
  role="group"
>
  <label
    class="css-1ry5edl"
    data-test-id="cf-ui-form-label"
    for="content-type-id"
    id="content-type-id-label"
  >
    Content type ID
  </label>
  <input
    aria-describedby="content-type-id-helptext"
    class="css-82ji86"
    data-test-id="content-type-id-input"
    id="content-type-id"
    name="contentTypeId"
    type="text"
    value="imageWithAiTags"
  />
  <div
    class="css-gg4vpm"
  >
    <p
      class="css-1l2c7z"
      data-test-id="cf-ui-help-text"
      id="content-type-id-helptext"
    >
      The ID is generated from the name, you can also set it manually
    </p>
  </div>
  <div
    aria-live="assertive"
    class="css-dcyvog"
    data-test-id="cf-ui-validation-message"
    id="content-type-id-validation"
  >
    <div
      class="css-ql15kp"
    >
      <svg
        aria-hidden="true"
        class="css-cvj358"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </div>
    <p
      class="css-1uhwrh7"
    />
  </div>
</div>
`;

exports[`AppView > when the app is not installed > should render the app view with installation screen 1`] = `
<div>
  <div
    class="css-7bfeg1"
  />
  <div
    class="css-jwwzlh"
  >
    <h1
      class="css-acwcvw css-ow69k3"
      data-test-id="cf-ui-heading"
    >
      About AI Image Tagging
    </h1>
    <p
      class="css-ki4iwd"
      data-test-id="cf-ui-paragraph"
    >
      The AI Image Tagging app uses AI and deep learning capabilities to automatically assign tags to images. The tags are visible and accessible via the Contentful web app entry editor and tags are searchable in the search bar.
    </p>
    <hr
      class="css-10hsrou"
    />
    <h1
      class="css-acwcvw css-ow69k3"
      data-test-id="cf-ui-heading"
    >
      Configuration
    </h1>
    <p
      class="css-ki4iwd"
      data-test-id="cf-ui-paragraph"
    >
      To help you get started, we are going to create a content type for you with a title field, an image field and a image tags field.
    </p>
    <div
      class="css-15g2oxy css-1fobf8d"
      data-test-id="content-type-name"
      role="group"
    >
      <label
        class="css-1ry5edl"
        data-test-id="cf-ui-form-label"
        for="content-type-name"
        id="content-type-name-label"
      >
        Content type name
      </label>
      <input
        aria-describedby="content-type-name-helptext"
        class="css-82ji86"
        data-test-id="content-type-name-input"
        id="content-type-name"
        name="contentTypeName"
        placeholder="e.g. AI Tagged Image"
        type="text"
        value="Image with AI tags"
      />
      <div
        class="css-gg4vpm"
      >
        <p
          class="css-1l2c7z"
          data-test-id="cf-ui-help-text"
          id="content-type-name-helptext"
        >
          You can use this content type to add tags to images
        </p>
      </div>
    </div>
    <div
      class="css-15g2oxy css-1fobf8d"
      data-test-id="content-type-id"
      role="group"
    >
      <label
        class="css-1ry5edl"
        data-test-id="cf-ui-form-label"
        for="content-type-id"
        id="content-type-id-label"
      >
        Content type ID
      </label>
      <input
        aria-describedby="content-type-id-helptext"
        class="css-82ji86"
        data-test-id="content-type-id-input"
        id="content-type-id"
        name="contentTypeId"
        type="text"
        value="imageWithAiTags"
      />
      <div
        class="css-gg4vpm"
      >
        <p
          class="css-1l2c7z"
          data-test-id="cf-ui-help-text"
          id="content-type-id-helptext"
        >
          The ID is generated from the name, you can also set it manually
        </p>
      </div>
      <div
        aria-live="assertive"
        class="css-dcyvog"
        data-test-id="cf-ui-validation-message"
        id="content-type-id-validation"
      >
        <div
          class="css-ql15kp"
        >
          <svg
            aria-hidden="true"
            class="css-cvj358"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
        </div>
        <p
          class="css-1uhwrh7"
        />
      </div>
    </div>
  </div>
  <div
    class="css-13jvbbd"
  >
    <img
      alt="logo"
      src="/src/components/AppView/app-logo.svg"
    />
  </div>
</div>
`;
